--- a/index.html
+++ b/index.html
@@ -144,151 +144,158 @@
     </div>
 
     <script>
-        const canvas = document.getElementById('pixelCanvas');
-        const ctx = canvas.getContext('2d');
-        const overlay = document.getElementById('overlay');
-        const colorPicker = document.getElementById('colorPicker');
-        const countdownDisplay = document.getElementById('countdown');
-        const submitCodeButton = document.getElementById('submitCode');
-        const userInput = document.getElementById('userInput');
-        const wipeCanvasButton = document.getElementById('wipeCanvasButton');
+        document.addEventListener('DOMContentLoaded', () => {
+            const canvas = document.getElementById('pixelCanvas');
+            const ctx = canvas.getContext('2d');
+            const overlay = document.getElementById('overlay');
+            const colorPicker = document.getElementById('colorPicker');
+            const countdownDisplay = document.getElementById('countdown');
+            const submitCodeButton = document.getElementById('submitCode');
+            const userInput = document.getElementById('userInput');
+            const wipeCanvasButton = document.getElementById('wipeCanvasButton');
+            const accessCodeDisplay = document.createElement('div'); // Create access code display
+            document.body.appendChild(accessCodeDisplay); // Append it to the body
 
-        let isCanvasUnlocked = false;
-        let cooldown = false;
-        let pixelsPlaced = 0;
-        let cooldownTime = 300; // 300 seconds (5 minutes)
-        let countdownTimer;
+            accessCodeDisplay.id = 'accessCodeDisplay'; // Set the ID for the access code display
+            accessCodeDisplay.textContent = 'Access Code: '; // Initial text
 
-        // Initialize pixel color
-        let currentColor = colorPicker.value;
+            let isCanvasUnlocked = false;
+            let cooldown = false;
+            let pixelsPlaced = 0;
+            let cooldownTime = 300; // 300 seconds (5 minutes)
+            let countdownTimer;
 
-        // Array to keep track of placed pixels
-        const placedPixels = [];
-        const pixelSize = 10; // Adjusted pixel size
+            // Initialize pixel color
+            let currentColor = colorPicker.value;
 
-        // Function to generate a random 5-digit code
-        function generateRandomCode() {
-            return Math.floor(10000 + Math.random() * 90000).toString(); // Generates a random 5-digit code
-        }
+            // Array to keep track of placed pixels
+            const placedPixels = [];
+            const pixelSize = 10; // Adjusted pixel size
 
-        // Function to check if it's Sunday after 17:00
-        function isSundayAfterFive() {
-            const now = new Date();
-            return now.getDay() === 0 && now.getHours() >= 17; // Sunday = 0
-        }
+            // Function to generate a random 5-digit code
+            function generateRandomCode() {
+                return Math.floor(10000 + Math.random() * 90000).toString(); // Generates a random 5-digit code
+            }
 
-        // Function to load or generate the access code
-        function loadOrGenerateAccessCode() {
-            const lastGeneratedCode = localStorage.getItem('randomAccessCode');
-            const lastGeneratedTime = localStorage.getItem('lastGeneratedTime');
-            const now = new Date();
+            // Function to check if it's Sunday after 17:00
+            function isSundayAfterFive() {
+                const now = new Date();
+                return now.getDay() === 0 && now.getHours() >= 17; // Sunday = 0
+            }
 
-            if (lastGeneratedCode && lastGeneratedTime) {
-                const lastTime = new Date(parseInt(lastGeneratedTime));
+            // Function to load or generate the access code
+            function loadOrGenerateAccessCode() {
+                const lastGeneratedCode = localStorage.getItem('randomAccessCode');
+                const lastGeneratedTime = localStorage.getItem('lastGeneratedTime');
+                const now = new Date();
 
-                // If it's Sunday after 17:00 and the last code was generated earlier, generate a new code
-                if (isSundayAfterFive() && now > lastTime) {
+                if (lastGeneratedCode && lastGeneratedTime) {
+                    const lastTime = new Date(parseInt(lastGeneratedTime));
+
+                    // If it's Sunday after 17:00 and the last code was generated earlier, generate a new code
+                    if (isSundayAfterFive() && now > lastTime) {
+                        const newCode = generateRandomCode();
+                        localStorage.setItem('randomAccessCode', newCode);
+                        localStorage.setItem('lastGeneratedTime', Date.now());
+                        accessCodeDisplay.textContent = `Access Code: ${newCode}`;
+                    } else {
+                        accessCodeDisplay.textContent = `Access Code: ${lastGeneratedCode}`; // Use the last generated code
+                    }
+                } else {
+                    // Generate and store a new code if none exists
                     const newCode = generateRandomCode();
                     localStorage.setItem('randomAccessCode', newCode);
                     localStorage.setItem('lastGeneratedTime', Date.now());
-                    accessCodeDisplay.textContent = newCode;
-                } else {
-                    accessCodeDisplay.textContent = lastGeneratedCode; // Use the last generated code
+                    accessCodeDisplay.textContent = `Access Code: ${newCode}`; // Display the new code
                 }
-            } else {
-                // Generate and store a new code if none exists
-                const newCode = generateRandomCode();
-                localStorage.setItem('randomAccessCode', newCode);
-                localStorage.setItem('lastGeneratedTime', Date.now());
-                accessCodeDisplay.textContent = newCode; // Display the new code
             }
-        }
 
-        // Call this function on page load
-        loadOrGenerateAccessCode();
+            // Call this function on page load
+            loadOrGenerateAccessCode();
 
-        // Update the current color display
-        colorPicker.addEventListener('input', (e) => {
-            currentColor = e.target.value;
-        });
+            // Update the current color display
+            colorPicker.addEventListener('input', (e) => {
+                currentColor = e.target.value;
+            });
 
-        // Function to place a pixel on the canvas
-        function placePixel(x, y) {
-            if (isCanvasUnlocked && !cooldown) {
-                const gridX = Math.floor(x / pixelSize) * pixelSize;
-                const gridY = Math.floor(y / pixelSize) * pixelSize;
-                const pixelKey = `${gridX},${gridY}`;
+            // Function to place a pixel on the canvas
+            function placePixel(x, y) {
+                if (isCanvasUnlocked && !cooldown) {
+                    const gridX = Math.floor(x / pixelSize) * pixelSize;
+                    const gridY = Math.floor(y / pixelSize) * pixelSize;
+                    const pixelKey = `${gridX},${gridY}`;
 
-                // Check if the pixel position is already occupied
-                if (!placedPixels.includes(pixelKey)) {
-                    ctx.fillStyle = currentColor;
-                    ctx.fillRect(gridX, gridY, pixelSize, pixelSize);
-                    placedPixels.push(pixelKey);
-                    pixelsPlaced++;
+                    // Check if the pixel position is already occupied
+                    if (!placedPixels.includes(pixelKey)) {
+                        ctx.fillStyle = currentColor;
+                        ctx.fillRect(gridX, gridY, pixelSize, pixelSize);
+                        placedPixels.push(pixelKey);
+                        pixelsPlaced++;
 
-                    if (pixelsPlaced === 1) {
-                        startCooldown(); // Start cooldown when the 1st pixel is placed
+                        if (pixelsPlaced === 1) {
+                            startCooldown(); // Start cooldown when the 1st pixel is placed
+                        }
                     }
                 }
             }
-        }
 
-        // Function to start the cooldown
-        function startCooldown(timeLeft = cooldownTime) {
-            cooldown = true;
-            const cooldownEnd = new Date().getTime() + (timeLeft * 1000);
-            localStorage.setItem('cooldownEnd', cooldownEnd);
-            updateCountdownDisplay(timeLeft);
-
-            countdownTimer = setInterval(() => {
-                timeLeft--;
+            // Function to start the cooldown
+            function startCooldown(timeLeft = cooldownTime) {
+                cooldown = true;
+                const cooldownEnd = new Date().getTime() + (timeLeft * 1000);
+                localStorage.setItem('cooldownEnd', cooldownEnd);
                 updateCountdownDisplay(timeLeft);
 
-                if (timeLeft <= 0) {
-                    clearInterval(countdownTimer);
-                    cooldown = false;
-                    pixelsPlaced = 0; // Reset the pixel count
-                    countdownDisplay.textContent = 'Cooldown: 0:00';
-                    localStorage.removeItem('cooldownEnd'); // Clear cooldown end time
+                countdownTimer = setInterval(() => {
+                    timeLeft--;
+                    updateCountdownDisplay(timeLeft);
+
+                    if (timeLeft <= 0) {
+                        clearInterval(countdownTimer);
+                        cooldown = false;
+                        pixelsPlaced = 0; // Reset the pixel count
+                        countdownDisplay.textContent = 'Cooldown: 0:00';
+                        localStorage.removeItem('cooldownEnd'); // Clear cooldown end time
+                    }
+                }, 1000);
+            }
+
+            // Function to update countdown display
+            function updateCountdownDisplay(timeLeft) {
+                countdownDisplay.textContent = `Cooldown: ${Math.floor(timeLeft / 60)}:${String(timeLeft % 60).padStart(2, '0')}`;
+            }
+
+            // Add event listener for canvas click
+            canvas.addEventListener('click', (e) => {
+                const rect = canvas.getBoundingClientRect();
+                const x = e.clientX - rect.left;
+                const y = e.clientY - rect.top;
+
+                placePixel(x, y);
+            });
+
+            // Add event listener for submitting access code
+            submitCodeButton.addEventListener('click', () => {
+                const accessCode = localStorage.getItem('randomAccessCode');
+
+                if (userInput.value === accessCode) {
+                    overlay.style.display = 'none';
+                    isCanvasUnlocked = true;
+                    userInput.value = ''; // Clear the input field
+                    wipeCanvasButton.style.display = 'block'; // Show the wipe canvas button
+                } else {
+                    alert('Incorrect access code. Please try again.');
                 }
-            }, 1000);
-        }
+            });
 
-        // Function to update countdown display
-        function updateCountdownDisplay(timeLeft) {
-            countdownDisplay.textContent = `Cooldown: ${Math.floor(timeLeft / 60)}:${String(timeLeft % 60).padStart(2, '0')}`;
-        }
-
-        // Add event listener for canvas click
-        canvas.addEventListener('click', (e) => {
-            const rect = canvas.getBoundingClientRect();
-            const x = e.clientX - rect.left;
-            const y = e.clientY - rect.top;
-
-            placePixel(x, y);
-        });
-
-        // Add event listener for submitting access code
-        submitCodeButton.addEventListener('click', () => {
-            const accessCode = localStorage.getItem('randomAccessCode');
-
-            if (userInput.value === accessCode) {
-                overlay.style.display = 'none';
-                isCanvasUnlocked = true;
-                userInput.value = ''; // Clear the input field
-                wipeCanvasButton.style.display = 'block'; // Show the wipe canvas button
-            } else {
-                alert('Incorrect access code. Please try again.');
-            }
-        });
-
-        // Add event listener for the wipe canvas button
-        wipeCanvasButton.addEventListener('click', () => {
-            if (confirm('Are you sure you want to wipe the canvas?')) {
-                ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear the canvas
-                placedPixels.length = 0; // Clear placed pixels
-                alert('Canvas has been wiped!');
-            }
+            // Add event listener for the wipe canvas button
+            wipeCanvasButton.addEventListener('click', () => {
+                if (confirm('Are you sure you want to wipe the canvas?')) {
+                    ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear the canvas
+                    placedPixels.length = 0; // Clear placed pixels
+                    alert('Canvas has been wiped!');
+                }
+            });
         });
     </script>
 </body>
