--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
             margin-bottom: 5px;
         }
     </style>
+    <!-- Include Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
 </head>
 <body>
     <h1>Pixel Wars</h1>
@@ -144,6 +147,22 @@
     </div>
 
     <script>
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyANfAj-fw2yJ_1lw75fjZLGCxy6oTWBOJA",
+            authDomain: "pixel-war-deddd.firebaseapp.com",
+            databaseURL: "https://pixel-war-deddd-default-rtdb.europe-west1.firebasedatabase.app",
+            projectId: "pixel-war-deddd",
+            storageBucket: "pixel-war-deddd.appspot.com",
+            messagingSenderId: "602125749650",
+            appId: "1:602125749650:web:5637bfbdacb77d227a454b",
+            measurementId: "G-D7CEB1DPH5"
+        };
+
+        // Initialize Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const database = firebase.getDatabase(app);
+
         document.addEventListener('DOMContentLoaded', () => {
             const canvas = document.getElementById('pixelCanvas');
             const ctx = canvas.getContext('2d');
@@ -157,71 +176,65 @@
             let isCanvasUnlocked = false;
             let cooldown = false;
             let pixelsPlaced = 0;
-            let cooldownTime = 300; // 300 seconds (5 minutes)
+            const cooldownTime = 300; // 300 seconds (5 minutes)
             let countdownTimer;
+            const pixelSize = 10;
 
             // Initialize pixel color
             let currentColor = colorPicker.value;
 
             // Array to keep track of placed pixels
             const placedPixels = [];
-            const pixelSize = 10; // Adjusted pixel size
 
-            // Function to generate a random 5-digit code
-            function generateRandomCode() {
-                return Math.floor(10000 + Math.random() * 90000).toString(); // Generates a random 5-digit code
+            // Function to save the current state of the canvas to Firebase
+            function saveCanvasState() {
+                set(ref(database, 'canvas/pixels'), placedPixels)
+                    .then(() => {
+                        console.log('Canvas state saved to Firebase.'); // Debugging log
+                    })
+                    .catch((error) => {
+                        console.error('Error saving canvas state:', error); // Debugging log
+                    });
             }
 
-            // Function to check if it's Sunday after 17:00
-            function isSundayAfterFive() {
-                const now = new Date();
-                return now.getDay() === 0 && now.getHours() >= 17; // Sunday = 0
-            }
-
-            // Function to load or generate the access code
-            function loadOrGenerateAccessCode() {
-                const lastGeneratedCode = localStorage.getItem('randomAccessCode');
-                const lastGeneratedTime = localStorage.getItem('lastGeneratedTime');
-                const now = new Date();
-
-                if (lastGeneratedCode && lastGeneratedTime) {
-                    const lastTime = new Date(parseInt(lastGeneratedTime));
-
-                    // If it's Sunday after 17:00 and the last code was generated earlier, generate a new code
-                    if (isSundayAfterFive() && now > lastTime) {
-                        const newCode = generateRandomCode();
-                        localStorage.setItem('randomAccessCode', newCode);
-                        localStorage.setItem('lastGeneratedTime', Date.now());
+            // Function to load the saved state of the canvas from Firebase
+            function loadCanvasState() {
+                const canvasRef = ref(database, 'canvas/pixels');
+                onValue(canvasRef, (snapshot) => {
+                    const data = snapshot.val();
+                    if (data && data.length > 0) {
+                        ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear the canvas first
+                        data.forEach(pixel => {
+                            ctx.fillStyle = pixel.color;
+                            ctx.fillRect(pixel.x, pixel.y, pixelSize, pixelSize);
+                            placedPixels.push(pixel);
+                        });
+                        console.log('Loaded canvas state from Firebase.'); // Debugging log
                     }
-                } else {
-                    // Generate and store a new code if none exists
-                    const newCode = generateRandomCode();
-                    localStorage.setItem('randomAccessCode', newCode);
-                    localStorage.setItem('lastGeneratedTime', Date.now());
-                }
+                });
             }
-
-            // Call this function on page load
-            loadOrGenerateAccessCode();
-
-            // Update the current color display
-            colorPicker.addEventListener('input', (e) => {
-                currentColor = e.target.value;
-            });
 
             // Function to place a pixel on the canvas
             function placePixel(x, y) {
                 if (isCanvasUnlocked && !cooldown) {
                     const gridX = Math.floor(x / pixelSize) * pixelSize;
                     const gridY = Math.floor(y / pixelSize) * pixelSize;
-                    const pixelKey = `${gridX},${gridY}`;
 
                     // Check if the pixel position is already occupied
-                    if (!placedPixels.includes(pixelKey)) {
-                        ctx.fillStyle = currentColor;
+                    if (!placedPixels.some(pixel => pixel.x === gridX && pixel.y === gridY)) {
+                        const newPixel = {
+                            x: gridX,
+                            y: gridY,
+                            color: currentColor
+                        };
+                        ctx.fillStyle = newPixel.color;
                         ctx.fillRect(gridX, gridY, pixelSize, pixelSize);
-                        placedPixels.push(pixelKey);
+                        placedPixels.push(newPixel);
+
+                        saveCanvasState(); // Save the pixel placement to Firebase
+
                         pixelsPlaced++;
+                        console.log('Pixels Placed:', pixelsPlaced); // Debugging log
 
                         if (pixelsPlaced === 1) {
                             startCooldown(); // Start cooldown when the 1st pixel is placed
@@ -235,62 +248,84 @@
                 cooldown = true;
                 const cooldownEnd = new Date().getTime() + (timeLeft * 1000);
                 localStorage.setItem('cooldownEnd', cooldownEnd);
-                updateCountdownDisplay(timeLeft);
+                console.log('Cooldown End Set:', cooldownEnd); // Debugging log
+                updateCountdownDisplay(cooldownEnd);
 
                 countdownTimer = setInterval(() => {
-                    timeLeft--;
-                    updateCountdownDisplay(timeLeft);
+                    const now = new Date().getTime();
+                    const remainingTime = cooldownEnd - now;
 
-                    if (timeLeft <= 0) {
+                    if (remainingTime <= 0) {
                         clearInterval(countdownTimer);
                         cooldown = false;
-                        pixelsPlaced = 0; // Reset the pixel count
+                        pixelsPlaced = 0;
                         countdownDisplay.textContent = 'Cooldown: 0:00';
-                        localStorage.removeItem('cooldownEnd'); // Clear cooldown end time
+                        console.log('Cooldown Finished'); // Debugging log
+                    } else {
+                        updateCountdownDisplay(cooldownEnd);
                     }
                 }, 1000);
             }
 
-            // Function to update countdown display
-            function updateCountdownDisplay(timeLeft) {
-                countdownDisplay.textContent = `Cooldown: ${Math.floor(timeLeft / 60).toString().padStart(2, '0')}:${(timeLeft % 60).toString().padStart(2, '0')}`;
+            // Function to update the countdown display
+            function updateCountdownDisplay(cooldownEnd) {
+                const now = new Date().getTime();
+                const remainingTime = cooldownEnd - now;
+                const minutes = Math.floor((remainingTime % (1000 * 60 * 60)) / (1000 * 60));
+                const seconds = Math.floor((remainingTime % (1000 * 60)) / 1000);
+                countdownDisplay.textContent = `Cooldown: ${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
             }
 
-            // Add event listener for canvas click
+            // Event listener for canvas clicks
             canvas.addEventListener('click', (e) => {
                 const rect = canvas.getBoundingClientRect();
                 const x = e.clientX - rect.left;
                 const y = e.clientY - rect.top;
-
                 placePixel(x, y);
             });
 
-            // Add event listener for submitting access code
+            // Event listener for color picker change
+            colorPicker.addEventListener('input', (e) => {
+                currentColor = e.target.value;
+            });
+
+            // Event listener for code submission
             submitCodeButton.addEventListener('click', () => {
-                const accessCode = localStorage.getItem('randomAccessCode');
-                const adminPassword = "Itsameamario1"; // Set the admin password
-
-                console.log(`Access Code: ${accessCode}, User Input: ${userInput.value}, Admin Password: ${adminPassword}`); // Debugging log
-
-                // Check if the user input matches either the access code or the admin password
-                if (userInput.value === accessCode || userInput.value === adminPassword) {
-                    overlay.style.display = 'none';
-                    isCanvasUnlocked = true;
-                    userInput.value = ''; // Clear the input field
-                    wipeCanvasButton.style.display = 'block'; // Show the wipe canvas button
+                const accessCode = userInput.value;
+                if (accessCode === 'YOUR_ACCESS_CODE') { // Replace with your actual access code
+                    overlay.style.display = 'none'; // Hide overlay
+                    isCanvasUnlocked = true; // Unlock canvas
+                    wipeCanvasButton.style.display = 'inline'; // Show wipe button
+                    loadCanvasState(); // Load canvas state from Firebase
                 } else {
-                    alert('Incorrect access code or admin password. Please try again.');
+                    alert('Incorrect access code. Please try again.');
                 }
             });
 
-            // Add event listener for the wipe canvas button
+            // Event listener for wipe canvas button
             wipeCanvasButton.addEventListener('click', () => {
-                if (confirm('Are you sure you want to wipe the canvas?')) {
-                    ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear the canvas
-                    placedPixels.length = 0; // Clear placed pixels
-                    alert('Canvas has been wiped!');
+                if (confirm('Are you sure you want to wipe the canvas? This action cannot be undone.')) {
+                    ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear canvas
+                    placedPixels.length = 0; // Clear placed pixels array
+                    saveCanvasState(); // Save the cleared state to Firebase
                 }
             });
+
+            // Load the saved canvas state on page load
+            loadCanvasState();
+
+            // Load cooldown state on page load
+            const cooldownEnd = localStorage.getItem('cooldownEnd');
+            if (cooldownEnd) {
+                const currentTime = new Date().getTime();
+                if (currentTime < cooldownEnd) {
+                    cooldown = true;
+                    updateCountdownDisplay(cooldownEnd);
+                    startCooldown(cooldownEnd);
+                } else {
+                    localStorage.removeItem('cooldownEnd'); // Clear expired cooldown
+                }
+            }
         });
     </script>
 </body>
